refactor: Optimize TripJdbcService with minor improvements and code cleanup