@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Timestamp;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
@@ -26,11 +27,11 @@ public class TripJdbcService {
         this.processedVisitJdbcService = processedVisitJdbcService;
     }
 
-    private final RowMapper<Trip> TRIP_ROW_MAPPER = new RowMapper<Trip>() {
+    private final RowMapper<Trip> TRIP_ROW_MAPPER = new RowMapper<>() {
         @Override
         public Trip mapRow(ResultSet rs, int rowNum) throws SQLException {
             ProcessedVisit startVisit = processedVisitJdbcService.findById(rs.getLong("start_visit_id")).orElseThrow();
-            ProcessedVisit endVisit  = processedVisitJdbcService.findById(rs.getLong("end_visit_id")).orElseThrow();
+            ProcessedVisit endVisit = processedVisitJdbcService.findById(rs.getLong("end_visit_id")).orElseThrow();
             return new Trip(
                     rs.getLong("id"),
                     rs.getTimestamp("start_time").toInstant(),
@@ -49,20 +50,10 @@ public class TripJdbcService {
     public List<Trip> findByUser(User user) {
         String sql = "SELECT t.*" +
                 "FROM trips t " +
-                "WHERE t.user_id = ?";
+                "WHERE t.user_id = ? ORDER BY start_time";
         return jdbcTemplate.query(sql, TRIP_ROW_MAPPER, user.getId());
     }
-
-    public List<Trip> findByUserAndStartTimeBetweenOrderByStartTimeAsc(
-            User user, Instant startTime, Instant endTime) {
-        String sql = "SELECT t.* " +
-                "FROM trips t " +
-                "WHERE t.user_id = ? AND t.start_time BETWEEN ? AND ? " +
-                "ORDER BY t.start_time ASC";
-        return jdbcTemplate.query(sql, TRIP_ROW_MAPPER, user.getId(),
-                java.sql.Timestamp.from(startTime), java.sql.Timestamp.from(endTime));
-    }
-
+    //add order by start time to any returning query AI!
     public List<Trip> findByUserAndTimeOverlap(User user, Instant startTime, Instant endTime) {
         String sql = "SELECT t.* " +
                 "FROM trips t " +
@@ -71,15 +62,15 @@ public class TripJdbcService {
                 "(t.start_time >= ? AND t.start_time <= ?) OR " +
                 "(t.end_time >= ? AND t.end_time <= ?))";
         return jdbcTemplate.query(sql, TRIP_ROW_MAPPER, user.getId(),
-                java.sql.Timestamp.from(endTime), java.sql.Timestamp.from(startTime),
-                java.sql.Timestamp.from(startTime), java.sql.Timestamp.from(endTime),
-                java.sql.Timestamp.from(startTime), java.sql.Timestamp.from(endTime));
+                Timestamp.from(endTime), Timestamp.from(startTime),
+                Timestamp.from(startTime), Timestamp.from(endTime),
+                Timestamp.from(startTime), Timestamp.from(endTime));
     }
 
     public boolean existsByUserAndStartTimeAndEndTime(User user, Instant startTime, Instant endTime) {
         String sql = "SELECT COUNT(*) FROM trips WHERE user_id = ? AND start_time = ? AND end_time = ?";
         Integer count = jdbcTemplate.queryForObject(sql, Integer.class, user.getId(),
-                java.sql.Timestamp.from(startTime), java.sql.Timestamp.from(endTime));
+                Timestamp.from(startTime), Timestamp.from(endTime));
         return count != null && count > 0;
     }
 
@@ -89,7 +80,7 @@ public class TripJdbcService {
                 "WHERE user_id = ? " +
                 "GROUP BY transport_mode_inferred " +
                 "ORDER BY SUM(travelled_distance_meters) DESC";
-        return jdbcTemplate.query(sql, (rs, rowNum) -> new Object[]{
+        return jdbcTemplate.query(sql, (rs, _) -> new Object[]{
                 rs.getString(1),
                 rs.getDouble(2),
                 rs.getLong(3),
@@ -103,12 +94,12 @@ public class TripJdbcService {
                 "WHERE user_id = ? AND start_time >= ? AND end_time <= ? " +
                 "GROUP BY transport_mode_inferred " +
                 "ORDER BY SUM(travelled_distance_meters) DESC";
-        return jdbcTemplate.query(sql, (rs, rowNum) -> new Object[]{
+        return jdbcTemplate.query(sql, (rs, _) -> new Object[]{
                 rs.getString(1),
                 rs.getDouble(2),
                 rs.getLong(3),
                 rs.getLong(4)
-        }, user.getId(), java.sql.Timestamp.from(startTime), java.sql.Timestamp.from(endTime));
+        }, user.getId(), Timestamp.from(startTime), Timestamp.from(endTime));
     }
 
     public Trip create(User user, Trip trip) {
@@ -116,8 +107,8 @@ public class TripJdbcService {
                 "VALUES (?, ?, ?, ?, ?, ?, ?, ?, 1) RETURNING id";
         Long id = jdbcTemplate.queryForObject(sql, Long.class,
                 user.getId(),
-                java.sql.Timestamp.from(trip.getStartTime()),
-                java.sql.Timestamp.from(trip.getEndTime()),
+                Timestamp.from(trip.getStartTime()),
+                Timestamp.from(trip.getEndTime()),
                 trip.getDurationSeconds(),
                 trip.getTravelledDistanceMeters(),
                 trip.getTransportModeInferred(),
@@ -130,8 +121,8 @@ public class TripJdbcService {
     public Trip update(Trip trip) {
         String sql = "UPDATE trips SET start_time = ?, end_time = ?, duration_seconds = ?, travelled_distance_meters = ?, transport_mode_inferred = ?, start_place_id = ?, end_place_id = ?, start_visit_id = ?, end_visit_id = ?, version = ? WHERE id = ?";
         jdbcTemplate.update(sql,
-                java.sql.Timestamp.from(trip.getStartTime()),
-                java.sql.Timestamp.from(trip.getEndTime()),
+                Timestamp.from(trip.getStartTime()),
+                Timestamp.from(trip.getEndTime()),
                 trip.getDurationSeconds(),
                 trip.getTravelledDistanceMeters(),
                 trip.getTransportModeInferred(),
@@ -147,12 +138,7 @@ public class TripJdbcService {
                 "FROM trips t " +
                 "WHERE t.id = ?";
         List<Trip> results = jdbcTemplate.query(sql, TRIP_ROW_MAPPER, id);
-        return results.isEmpty() ? Optional.empty() : Optional.of(results.get(0));
-    }
-
-    public void deleteById(Long id) {
-        String sql = "DELETE FROM trips WHERE id = ?";
-        jdbcTemplate.update(sql, id);
+        return results.isEmpty() ? Optional.empty() : Optional.of(results.getFirst());
     }
 
     public void bulkInsert(User user, List<Trip> tripsToInsert) {
